.forever/VWuo.log
1451082708 '{"result":"♡"}'
1451083304 '{"result":"♡"}'
1451083905 '{"result":"♡"}'
1451084504 '{"result":"♡"}'
1451085105 '{"result":"♡"}'
1451085703 '{"result":"♡"}'
1451086304 '{"result":"♡"}'
1451086903 '{"result":"♡"}'
1451087503 '{"result":"♡"}'
1451088104 '{"result":"♡"}'
1451088704 '{"result":"♡"}'
1451089304 '{"result":"♡"}'
1451089904 '{"result":"♡"}'
1451090504 '{"result":"♡"}'
1451091104 '{"result":"♡"}'
1451091704 '{"result":"♡"}'
1451092304 '{"result":"♡"}'
1451092904 '{"result":"♡"}'
1451093504 '{"result":"♡"}'
1451094104 '{"result":"♡"}'
1451094704 '{"result":"♡"}'
1451095304 '{"result":"♡"}'
1451095904 '{"result":"♡"}'
1451096504 '{"result":"♡"}'
1451097104 '{"result":"♡"}'
1451097704 '{"result":"♡"}'
1451098304 '{"result":"♡"}'
1451098909 '{"result":"♡"}'
1451099505 '{"result":"♡"}'
1451100105 '{"result":"♡"}'
1451100705 '{"result":"♡"}'
1451101305 '{"result":"♡"}'
1451101905 '{"result":"♡"}'
1451102504 '{"result":"♡"}'
1451103105 '{"result":"♡"}'
1451103708 '{"result":"♡"}'
1451104309 '{"result":"♡"}'
1451104905 '{"result":"♡"}'
1451105505 '{"result":"♡"}'
1451106106 '{"result":"♡"}'
1451106705 '{"result":"♡"}'
1451107305 '{"result":"♡"}'
1451107905 '{"result":"♡"}'
1451108505 '{"result":"♡"}'
1451109105 '{"result":"♡"}'
1451109705 '{"result":"♡"}'
1451110305 '{"result":"♡"}'
1451110905 '{"result":"♡"}'
1451111505 '{"result":"♡"}'
1451112105 '{"result":"♡"}'
1451112705 '{"result":"♡"}'
1451113305 '{"result":"♡"}'
1451113905 '{"result":"♡"}'
1451114510 '{"result":"♡"}'
1451115105 '{"result":"♡"}'
1451115705 '{"result":"♡"}'
1451116306 '{"result":"♡"}'
1451116905 '{"result":"♡"}'
1451117510 '{"result":"♡"}'
1451118106 '{"result":"♡"}'
1451118707 '{"result":"♡"}'
1451119307 '{"result":"♡"}'
1451119907 '{"result":"♡"}'
1451120508 '{"result":"♡"}'
1451121106 '{"result":"♡"}'
1451121706 '{"result":"♡"}'
1451122306 '{"result":"♡"}'
1451122906 '{"result":"♡"}'
1451123506 '{"result":"♡"}'
1451124106 '{"result":"♡"}'
1451124706 '{"result":"♡"}'
1451125306 '{"result":"♡"}'
1451125906 '{"result":"♡"}'
1451126506 '{"result":"♡"}'
1451127106 '{"result":"♡"}'
1451127706 '{"result":"♡"}'
1451128306 '{"result":"♡"}'
1451128906 '{"result":"♡"}'
1451129507 '{"result":"♡"}'
1451130107 '{"result":"♡"}'
1451130707 '{"result":"♡"}'
1451131307 '{"result":"♡"}'
1451131907 '{"result":"♡"}'
1451132507 '{"result":"♡"}'
1451133107 '{"result":"♡"}'
1451133707 '{"result":"♡"}'
1451134307 '{"result":"♡"}'
1451134907 '{"result":"♡"}'
1451135507 '{"result":"♡"}'
1451136107 '{"result":"♡"}'
1451136707 '{"result":"♡"}'
1451137308 '{"result":"♡"}'
1451137908 '{"result":"♡"}'
1451138507 '{"result":"♡"}'
1451139109 '{"result":"♡"}'
1451139707 '{"result":"♡"}'
1451140307 '{"result":"♡"}'
1451140907 '{"result":"♡"}'
1451141507 '{"result":"♡"}'
1451142108 '{"result":"♡"}'
1451142708 '{"result":"♡"}'
1451143308 '{"result":"♡"}'
1451143908 '{"result":"♡"}'
1451144508 '{"result":"♡"}'
1451145108 '{"result":"♡"}'
1451145709 '{"result":"♡"}'
1451146308 '{"result":"♡"}'
1451146908 '{"result":"♡"}'
1451147508 '{"result":"♡"}'
1451148108 '{"result":"♡"}'
1451148709 '{"result":"♡"}'
1451149308 '{"result":"♡"}'
1451149908 '{"result":"♡"}'
1451150508 '{"result":"♡"}'
1451151108 '{"result":"♡"}'
1451151708 '{"result":"♡"}'
1451152308 '{"result":"♡"}'
1451152909 '{"result":"♡"}'
1451153508 '{"result":"♡"}'
1451154112 '{"result":"♡"}'
1451154708 '{"result":"♡"}'
1451155308 '{"result":"♡"}'
1451155909 '{"result":"♡"}'
1451156509 '{"result":"♡"}'
1451157108 '{"result":"♡"}'
1451157708 '{"result":"♡"}'
1451158311 '{"result":"♡"}'
1451158909 '{"result":"♡"}'
1451159509 '{"result":"♡"}'
1451160109 '{"result":"♡"}'
1451160710 '{"result":"♡"}'
1451161309 '{"result":"♡"}'
1451161909 '{"result":"♡"}'
1451162509 '{"result":"♡"}'
1451163109 '{"result":"♡"}'
1451163709 '{"result":"♡"}'
1451164309 '{"result":"♡"}'
1451164909 '{"result":"♡"}'
1451165509 '{"result":"♡"}'
1451166109 '{"result":"♡"}'
1451166709 '{"result":"♡"}'
1451167310 '{"result":"♡"}'
1451167909 '{"result":"♡"}'
1451168509 '{"result":"♡"}'
1451169110 '{"result":"♡"}'
1451169710 '{"result":"♡"}'
1451170310 '{"result":"♡"}'
1451170910 '{"result":"♡"}'
1451171510 '{"result":"♡"}'
1451172110 '{"result":"♡"}'
1451172710 '{"result":"♡"}'
1451173310 '{"result":"♡"}'
1451173910 '{"result":"♡"}'
1451174510 '{"result":"♡"}'
1451175110 '{"result":"♡"}'
1451175710 '{"result":"♡"}'
1451176311 '{"result":"♡"}'
1451176910 '{"result":"♡"}'
1451177512 '{"result":"♡"}'
1451178110 '{"result":"♡"}'
1451178711 '{"result":"♡"}'
1451179310 '{"result":"♡"}'
undefined:1
undefined
^

SyntaxError: Unexpected token u
    at Object.parse (native)
    at Request._callback (/home/www/iotupdates/app.js:20:24)
    at self.callback (/home/www/iotupdates/node_modules/request/request.js:198:22)
    at emitOne (events.js:78:13)
    at Request.emit (events.js:170:7)
    at Request.onRequestError (/home/www/iotupdates/node_modules/request/request.js:820:8)
    at emitOne (events.js:78:13)
    at ClientRequest.emit (events.js:170:7)
    at Socket.socketErrorListener (_http_client.js:266:9)
    at emitOne (events.js:78:13)
error: Forever detected script exited with code: 1
error: Script restart attempt #1
1451180553 '{"result":"♡"}'
1451181158 '{"result":"♡"}'
1451181758 '{"result":"♡"}'
1451182353 '{"result":"♡"}'
1451182953 '{"result":"♡"}'
1451183553 '{"result":"♡"}'
1451184153 '{"result":"♡"}'
1451184753 '{"result":"♡"}'
1451185354 '{"result":"♡"}'
1451185953 '{"result":"♡"}'
1451186553 '{"result":"♡"}'
1451187154 '{"result":"♡"}'
1451187753 '{"result":"♡"}'
1451188354 '{"result":"♡"}'
1451188953 '{"result":"♡"}'
1451189554 '{"result":"♡"}'
1451190154 '{"result":"♡"}'
1451190754 '{"result":"♡"}'
1451191354 '{"result":"♡"}'
1451191954 '{"result":"♡"}'
1451192554 '{"result":"♡"}'
1451193154 '{"result":"♡"}'
1451193754 '{"result":"♡"}'
1451194354 '{"result":"♡"}'
1451194954 '{"result":"♡"}'
1451195554 '{"result":"♡"}'
